--- a/app/views/volunteer/homes/top.html.erb
+++ b/app/views/volunteer/homes/top.html.erb
@@ -1,2 +1,4 @@
 <h1>Volunteer::Homes#top</h1>
 <p>Find me in app/views/volunteer/homes/top.html.erb</p>
+
+<%= link_to "ログアウト", destroy_volunteer_session_path, method: :delete %>
