--- a/app/views/local_government/stocks/index.html.erb
+++ b/app/views/local_government/stocks/index.html.erb
@@ -14,7 +14,7 @@
             <th>在庫数</th>
             <th>一人当たりの必要数/日</th>
             <th>欠品数</th>
-            <th>期限</th>
+            <th>使用期限</th>
             <th>残り日数</th>
             <th>備考</th>
             <th>作成日</th>
