Finish　volunteer_login

--- a/app/views/volunteer/registrations/new.html.erb
+++ b/app/views/volunteer/registrations/new.html.erb
@@ -10,7 +10,11 @@
   <div class="row">
     <div class="mx-auto">
       <%= render "volunteer/shared/error_messages", resource: resource %>
+    </div>
+  </div>
 
+  <div class="row">
+    <div class="mx-auto">
       <div class="field">
         <%= f.text_field :name, :placeholder => "お名前", size: "40" %>
       </div>
