--- a/app/views/volunteer/local_governments/index.html.erb
+++ b/app/views/volunteer/local_governments/index.html.erb
@@ -1,2 +1,5 @@
 <h1>Volunteer::LocalGovernments#index</h1>
 <p>Find me in app/views/volunteer/local_governments/index.html.erb</p>
+
+自治体選択ページ
+<%= link_to "ログアウト", destroy_volunteer_session_path, method: :delete %>
