--- a/app/views/local_government/stocks/new.html.erb
+++ b/app/views/local_government/stocks/new.html.erb
@@ -6,28 +6,28 @@
   </div>
   <div class="row">
     <div class="col-1"></div>
-    <div class="col-10">
+    <div class="col-10 text-center">
       <%= form_with model: @stock, url: local_government_stocks_path, method: :post do |f| %>
         <table class="table table-borderless">
           <tr>
             <th><%= f.label "品名" %></th>
-            <td><%= f.text_field :name, autofocus: true %></td>
+            <td><%= f.text_field :name, autofocus: true, size:50 %></td>
           </tr>
           <tr>
             <th><%= f.label "在庫数" %></th>
-            <td><%= f.text_field :amount %></td>
+            <td><%= f.text_field :amount, size: 50 %></td>
           </tr>
-          <tr>
-            <th><%= f.label "一人当たりの必要数/日" %></th>
-            <td><%= f.text_field : , placeholder: "1日の一人当たりの必要数を入力してください" %></td>
-          </tr>
+          <!--<tr>-->
+            <th><%#= f.label "一人当たりの必要数/日" %></th>
+            <td><%#= f.text_field : , placeholder: "1日の一人当たりの必要数を入力してください", size: 40 %></td>
+          <!--</tr>-->
           <tr>
             <th><%= f.label "使用期限" %></th>
-            <td><%= f.text_field :deadline %></td>
+            <td><%= f.date_field :deadline, class: 'custom-date-field' %></td>
           </tr>
           <tr>
             <th><%= f.label "備考" %></th>
-            <td><%= f.text_area :memo, rows: '3' %></td>
+            <td><%= f.text_area :memo, size: "50x5" %></td>
           </tr>
           <tr>
             <th></th>
