--- a/app/views/local_government/stocks/edit.html.erb
+++ b/app/views/local_government/stocks/edit.html.erb
@@ -1,2 +1,41 @@
-<h1>LocalGovernment::Stocks#edit</h1>
-<p>Find me in app/views/local_government/stocks/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-12 text-center">
+      <h3><b>在庫更新</b></h3>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-1"></div>
+    <div class="col-10 text-center">
+      <%= form_with model: @stock, url: local_government_stock_path, method: :patch do |f| %>
+        <table class="table table-borderless">
+          <tr>
+            <th><%= f.label "品名" %></th>
+            <td><%= f.text_field :name, autofocus: true, size:50 %></td>
+          </tr>
+          <tr>
+            <th><%= f.label "在庫数" %></th>
+            <td><%= f.text_field :amount, size: 50 %></td>
+          </tr>
+          <!--<tr>-->
+            <th><%#= f.label "一人当たりの必要数/日" %></th>
+            <td><%#= f.text_field : , placeholder: "1日の一人当たりの必要数を入力してください", size: 40 %></td>
+          <!--</tr>-->
+          <tr>
+            <th><%= f.label "使用期限" %></th>
+            <td><%= f.date_field :deadline, class: 'custom-date-field' %></td>
+          </tr>
+          <tr>
+            <th><%= f.label "備考" %></th>
+            <td><%= f.text_area :memo, size: "50x5" %></td>
+          </tr>
+          <tr>
+            <th></th>
+            <td><%= f.submit "更新" %><%= link_to "削除", local_government_stock_path(@stock), data: { confirm: "本当に削除しますか？" }, method: :delete %></td>
+          </tr>
+        </table>
+      <% end %>  
+    </div>
+    <div class="col-1"></div>
+  </div>
+</div>
