--- a/app/views/volunteer/users/show.html.erb
+++ b/app/views/volunteer/users/show.html.erb
@@ -1,2 +1,32 @@
-<h1>Volunteer::Users#show</h1>
-<p>Find me in app/views/volunteer/users/show.html.erb</p>
+<div class="container">
+
+  <div class="row">
+    <div class="mx-auto">
+      マイページ
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="mx-auto">
+
+      <table>
+        <tdody>
+          <tr>
+            <th>会員情報</th>
+            <td>
+              <%= link_to "確認", edit_volunteer_user %>
+            </td>
+          </tr>
+          <tr>
+            <th>予約履歴一覧</th>
+            <td>
+              <%#= link_to "確認", %>
+            </td>
+          </tr>
+        </tdody>
+      </table>
+
+    </div>
+  </div>
+
+</div>
