--- a/app/views/local_government/stocks/new.html.erb
+++ b/app/views/local_government/stocks/new.html.erb
@@ -11,30 +11,30 @@
         <table class="table table-borderless">
           <tr>
             <th><%= f.label "品名" %></th>
-            <td><%= f.text_field :name, autofocus: true, size:50 %></td>
+            <td><%= f.text_field :name, autofocus: true, placeholder: "1~20文字以内", size:50 %></td>
           </tr>
           <tr>
             <th><%= f.label "在庫数" %></th>
             <td><%= f.text_field :amount, size: 50 %></td>
           </tr>
-          <!--<tr>-->
-            <th><%#= f.label "一人当たりの必要数/日" %></th>
-            <td><%#= f.text_field : , placeholder: "1日の一人当たりの必要数を入力してください", size: 40 %></td>
-          <!--</tr>-->
+          <tr>
+            <th><%= f.label "一人当たりの必要数/日" %></th>
+            <td><%= f.text_field :one_daily_quantity, placeholder: "1日の一人当たりの必要数を入力してください", size: 40 %></td>
+          </tr>
           <tr>
             <th><%= f.label "使用期限" %></th>
             <td><%= f.date_field :deadline, class: 'custom-date-field' %></td>
           </tr>
           <tr>
             <th><%= f.label "備考" %></th>
-            <td><%= f.text_area :memo, size: "50x5" %></td>
+            <td><%= f.text_area :memo, placeholder: "200文字以内", size: "50x5" %></td>
           </tr>
           <tr>
             <th></th>
             <td><%= f.submit "登録" %></td>
           </tr>
         </table>
-      <% end %>  
+      <% end %>
     </div>
     <div class="col-1"></div>
   </div>
