--- a/app/views/local_government/registrations/new.html.erb
+++ b/app/views/local_government/registrations/new.html.erb
@@ -1,29 +1,44 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "local_government/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="container">
+  <div class="row my-5">
+    <div class="mx-auto">
+      <h1><strong>新規登録</strong></h1>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+  <div class="row my-5">
+　  <div class="mx-auto">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= render "local_government/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+      <div class="field mt-4">
+        <%= f.text_field :name, :placeholder => "自治体名", size: "40" %>
+      </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+      <div class="field mt-4">
+        <%= f.email_field :email, :placeholder => "メールアドレス", size: "40" %>
+      </div>
 
-<%= render "local_government/shared/links" %>
+      <div class="field mt-4">
+        <%= f.password_field :password, autocomplete: "new-password", :placeholder => "パスワード", size: "40" %>
+      </div>
+
+      <div class="field mt-4">
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", :placeholder => "パスワード確認", size: "40" %>
+      </div>
+    </div>
+  </div>
+  <div class="row my-5">
+    <div class="mx-auto">
+      <div class="actions">
+        <%= f.submit "登録",class: "btn btn-success" %>
+      </div>
+    </div>
+  </div>
+  <div class="row my-4">
+    <div class="mx-auto">
+      <%= render "local_government/shared/links" %>
+    </div>
+  </div>
+</div>
+
+  <% end %>
