在庫登録画面　修正

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -2,5 +2,10 @@
 
 /*在庫登録画面の使用期限入力フォームサイズ*/
 .custom-date-field {
-    width: 435px;
+  width: 440px;
+}
+
+/*在庫登録画面の登録ボタンサイズ*/
+.custom-btn-size {
+  width: 150px;
 }
