--- a/app/views/volunteer/local_governments/show.html.erb
+++ b/app/views/volunteer/local_governments/show.html.erb
@@ -1,2 +1,4 @@
 <h1>Volunteer::LocalGovernments#show</h1>
 <p>Find me in app/views/volunteer/local_governments/show.html.erb</p>
+
+<%= link_to "自治体選択に戻る", volunteer_local_governments_path %>
