--- a/app/views/local_government/registrations/new.html.erb
+++ b/app/views/local_government/registrations/new.html.erb
@@ -7,7 +7,8 @@
 
   <div class="row my-5">
 　  <div class="mx-auto">
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= form_with model: @local_government, url: registration_path(resource_name) do |f| %>
+
       <%= render "local_government/shared/error_messages", resource: resource %>
 
       <div class="field mt-4">
@@ -16,6 +17,10 @@
 
       <div class="field mt-4">
         <%= f.email_field :email, :placeholder => "メールアドレス", size: "40" %>
+      </div>
+
+      <div class="field mt-4">
+        <%= f.text_field :phone_number, :placeholder => "電話番号", size: "40" %>
       </div>
 
       <div class="field mt-4">
@@ -34,11 +39,11 @@
       </div>
     </div>
   </div>
+  <% end %>
+
   <div class="row my-4">
     <div class="mx-auto">
       <%= render "local_government/shared/links" %>
     </div>
   </div>
 </div>
-
-  <% end %>
