--- a/app/views/volunteer/users/edit.html.erb
+++ b/app/views/volunteer/users/edit.html.erb
@@ -17,7 +17,7 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="row mt-2">
     <div class="col-5 text-right">
       <%= f.label :email, "メールアドレス" %>
     </div>
@@ -26,7 +26,7 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="row mt-2">
     <div class="col-5 text-right">
       <%= f.label :password, "パスワード" %>
     </div>
@@ -35,7 +35,7 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="row mt-2">
     <div class="col-5 text-right">
       <%= f.label :phone_number, "電話番号" %>
     </div>
@@ -44,7 +44,7 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="row mt-2">
     <div class="col-5 text-right">
       <%= f.label :post_code, "郵便番号" %>
     </div>
@@ -53,7 +53,7 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="row mt-2">
     <div class="col-5 text-right">
       <%= f.label :address %>
     </div>
@@ -62,9 +62,11 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="row mt-4">
     <div class="col-5 text-right"></div>
-    <div class="col-7">更新</div>
+    <div class="col-7">
+      <%= f.submit "更新" %>
+    </div>
   </div>
 
   <% end %>
