aboutページの作成

--- a/app/views/volunteer/homes/about.html.erb
+++ b/app/views/volunteer/homes/about.html.erb
@@ -1,2 +1,25 @@
-<h1>Volunteer::Homes#about</h1>
-<p>Find me in app/views/volunteer/homes/about.html.erb</p>
+<div class="container">
+  <div class="row text-center">
+    <div class="mx-auto col-11 my-5">
+      <h1><strong>SHARE AID</strong>とは</h1>
+      <h1> ... </h1>
+    </div>
+    <div class="col-12 mt-3">
+      <div class="text-center mt-2">
+        <p>自治体と個人ボランティア間の物資状況の連携が取れる在庫管理アプリです。<br>
+           被災地を支援したいという思いを無駄にしないために、<br>
+           被災地で何が必要かという情報をリアルタイムで知ることができます。<br>
+           一人一人の　「支援をしたい」　という想いを繋げ、<br>
+           被災地に必要な物資を届け、<br>
+           支援の輪を広げませんか？
+        </p>
+      </div>
+      <!--<div class="text-center mt-5">-->
+      <!--  <%#= image_tag 写真を入れる %>-->
+      <!--</div>-->
+    </div>
+  </div>
+  <div class="col-12 text-center mt-3">
+    <%= link_to "不足一覧", volunteer_local_governments_path, class: "btn btn-outline-secondary" %>
+  </div>
+</div>
