--- a/app/views/local_government/stocks/index.html.erb
+++ b/app/views/local_government/stocks/index.html.erb
@@ -7,7 +7,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-4">
+    <div class="col-4 d-flex align-items-center">
       <%= link_to '新しい登録順', local_government_stocks_path(latest: "true") %>
       |<%= link_to '古い登録順', local_government_stocks_path(old: "true") %>
       |<%= link_to '期限が近い順', local_government_stocks_path(deadline: "true") %>
