--- a/app/views/local_government/registrations/new.html.erb
+++ b/app/views/local_government/registrations/new.html.erb
@@ -10,7 +10,10 @@
   　  <div class="mx-auto">
         <%= render "local_government/shared/error_messages", resource: resource %>
         <div class="field mt-4">
-          <%= f.text_field :name, :placeholder => "自治体名", size: "40" %>
+          <%= f.text_field :name, autofocus: true, :placeholder => "自治体名", size: "40" %>
+        </div>
+        <div class="field mt-4">
+          <%= f.text_field :population, :placeholder => "人口", size: "40" %>
         </div>
         <div class="field mt-4">
           <%= f.email_field :email, :placeholder => "メールアドレス", size: "40" %>
