--- a/app/views/local_government/stocks/index.html.erb
+++ b/app/views/local_government/stocks/index.html.erb
@@ -46,7 +46,7 @@
                 
                 <td class="cell-text-align"><%= stock.one_daily_quantity %></td>
                 <td class="cell-text-align"><%= stock.local_government.population * stock.one_daily_quantity - stock.amount %></td>
-                <td class="cell-text-align"><%= stock.deadline %></td>
+                <td class="cell-text-align"><%= stock.deadline.strftime("%Y年%m月%d日") %></td>
                 <td>
                   <% if stock.deadline - Date.today > 5 %>
                     <span>あと&nbsp;<%= (stock.deadline - Date.today).to_i %>&nbsp;日</span>
@@ -61,8 +61,8 @@
                   <% end %>
                 </td>
                 <td><%= simple_format(stock.memo) %></td>
-                <td class="cell-text-align"><%= stock.created_at.strftime("%Y年%m月%d日").to_s %></td>
-                <td class="cell-text-align"><%= stock.updated_at.strftime("%Y年%m月%d日").to_s %></td>
+                <td class="cell-text-align"><%= stock.created_at.strftime("%Y年%m月%d日") %></td>
+                <td class="cell-text-align"><%= stock.updated_at.strftime("%Y年%m月%d日") %></td>
                 <td><%= link_to "編集", edit_local_government_stock_path(stock) %></td>
               </tr>
             <% end %>
