--- a/app/views/volunteer/local_governments/show.html.erb
+++ b/app/views/volunteer/local_governments/show.html.erb
@@ -1,3 +1,72 @@
 <div class="text-center"><%= link_to "自治体選択に戻る", volunteer_local_governments_path %></div>
 
 
+<div class="container">
+  <div class="row">
+    <div class="col-5">
+      <h3><b><%= @local_government.name %>ページ</b></h3>
+    </div>
+    <div class="col-7">
+      <h3><b>不足一覧</b></h3>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <table class="table table-bordered table-striped">
+        <thead>
+          <tr>
+            <th>品名</th>
+            <th>備考</th>
+            <th>必要数</th>
+            <th>提供数</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% if @stocks.any? %>
+            <% @stocks.each do |stock| %>
+              <tr>
+                <td><%= stock.name %></td>
+                
+                
+                <!--↓↓↓暫定です↓↓↓-->
+                <td class="cell-text-align"><%= stock.amount %><%#= stock.amount + ReservationDetails.amount %></td>
+                
+                
+                <td class="cell-text-align"><%= stock.one_daily_quantity %></td>
+                <td class="cell-text-align"><%= stock.local_government.population * stock.one_daily_quantity - stock.amount %></td>
+                <td class="cell-text-align"><%= stock.deadline.strftime("%Y年%m月%d日") %></td>
+                <td>
+                  <% if stock.deadline - Date.today > 5 %>
+                    <span>あと&nbsp;<%= (stock.deadline - Date.today).to_i %>&nbsp;日</span>
+                  <% elsif (0..5).include?(stock.deadline - Date.today) %>
+                    <% if stock.deadline - Date.today == 0 %>
+                      <span class="text-warning">今日までです</span>
+                    <% else %>
+                      <span class="text-success">期限が迫っています(あと&nbsp;<%= (stock.deadline - Date.today).to_i %>&nbsp;日)</span>
+                    <% end %>
+                  <% else %>
+                    <span class="text-danger">期限が過ぎています</span>
+                  <% end %>
+                </td>
+                <td><%= simple_format(stock.memo) %></td>
+                <td class="cell-text-align"><%= stock.created_at.strftime("%Y年%m月%d日") %></td>
+                <td class="cell-text-align"><%= stock.updated_at.strftime("%Y年%m月%d日") %></td>
+                <td><%= link_to "編集", edit_local_government_stock_path(stock) %></td>
+              </tr>
+            <% end %>
+          <% else %>
+            <tr>
+              <td><p><b>在庫品の登録がありません。</b></p></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 text-center">
+      <%= paginate @stocks %>
+    </div>
+  </div>
+</div>
