--- a/app/views/local_government/stocks/index.html.erb
+++ b/app/views/local_government/stocks/index.html.erb
@@ -58,7 +58,7 @@
                 <td><%= simple_format(stock.memo) %></td>
                 <td class="cell-text-align"><%= stock.created_at.strftime("%Y年%m月%d日") %></td>
                 <td class="cell-text-align"><%= stock.updated_at.strftime("%Y年%m月%d日") %></td>
-                <td><%= link_to "編集", edit_local_government_stock_path(stock) %></td>
+                <td><%= link_to "編集", edit_local_government_stock_path(stock), remote: true %></td>
               </tr>
             <% end %>
           <% else %>
@@ -76,3 +76,7 @@
     </div>
   </div>
 </div>
+
+<div id="mask" class="hidden"></div>
+<div id="modal" class="hidden"></div>
+
