<add>ボランティア側不足一覧完成

--- a/app/views/volunteer/local_governments/show.html.erb
+++ b/app/views/volunteer/local_governments/show.html.erb
@@ -1,4 +1,41 @@
-<h1>Volunteer::LocalGovernments#show</h1>
-<p>Find me in app/views/volunteer/local_governments/show.html.erb</p>
-
-<%= link_to "自治体選択に戻る", volunteer_local_governments_path %>
+<div class="container">
+  <div class="row my-5">
+    <div class="mx-auto">
+      <h1><strong>不足一覧</strong></h1>
+    </div>
+  </div>
+  <div class="row justify-content-center">
+    <div class="col-auto">
+      <%= form_with url: volunteer_reserves_comfirm_path, method: :post, local: true do |f| %>
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th class="text-center">商品名</th>
+              <th class="text-center">備考</th>
+              <th class="text-center">必要数</th>
+              <th class="text-center">提供数</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @stocks.each do |stock| %>
+            <tr>
+              <td class="text-center w-20"><%= stock.name %></td>
+              <td class="text-center w-20"><%= stock.memo %></td>
+              <td class="text-center w-20"><%= @local_government.population * stock.one_daily_quantity - stock.amount %></td>
+              <td class="text-center w-20">
+                <%= f.number_field "stocks[#{stock.id}][quantity]", min: 0, class: 'form-control' %>
+                <%= f.hidden_field "stocks[#{stock.id}][id]", value: stock.id %>
+              </td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+        <div class="row my-3 justify-content-center">
+          <div class="col-auto">
+            <%= f.submit '次へ', class: 'btn btn-secondary' %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
