--- a/app/views/layouts/_volunteer_header.html.erb
+++ b/app/views/layouts/_volunteer_header.html.erb
@@ -1,5 +1,5 @@
-<header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-info">
+<header class="volunteer_color">
+  <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
       <h1 class="text-white"><strong>SHARE AID</strong></h1>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
