--- a/app/views/layouts/_local_government_header.html.erb
+++ b/app/views/layouts/_local_government_header.html.erb
@@ -1,5 +1,5 @@
-<header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-info">
+<header class="local_government_color">
+  <nav class="navbar navbar-expand-lg navbar-dark ">
     <div class="container">
       <h1 class="text-white"><strong>SHARE AID</strong></h1>
 
