--- a/app/views/volunteer/local_governments/index.html.erb
+++ b/app/views/volunteer/local_governments/index.html.erb
@@ -16,7 +16,7 @@
             <% @local_governments.each do |local_government| %>
             <tr>
               <td class="text-center"><%= local_government.name %></td>
-              <td class="text-center"><%= link_to "提供数一覧", volunteer_local_government_path(local_government.id) %></td>
+              <td class="text-center"><%= link_to "不足一覧", volunteer_local_government_path(local_government.id) %></td>
             </tr>
             <% end %>
           </tbody>
