--- a/app/views/volunteer/registrations/new.html.erb
+++ b/app/views/volunteer/registrations/new.html.erb
@@ -1,13 +1,12 @@
 <div class="container">
-
-  <div class="row my-4">
+  <div class="row my-5">
     <div class="mx-auto">
-      <h2>新規登録</h2>
+      <h1><strong>新規登録</strong></h1>
     </div>
   </div>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <div class="row">
+  <div class="row my-5">
     <div class="mx-auto">
       <%= render "volunteer/shared/error_messages", resource: resource %>
     </div>
@@ -19,27 +18,27 @@
         <%= f.text_field :name, :placeholder => "お名前", size: "40" %>
       </div>
 
-      <div class="field mt-2">
+      <div class="field mt-4">
         <%= f.email_field :email, :placeholder => "メールアドレス", size: "40" %>
       </div>
 
-      <div class="field mt-2">
+      <div class="field mt-4">
         <%= f.password_field :password, autocomplete: "new-password", :placeholder => "パスワード", size: "40" %>
       </div>
 
-      <div class="field mt-2">
+      <div class="field mt-4">
         <%= f.password_field :password_confirmation, autocomplete: "new-password", :placeholder => "パスワード確認", size: "40" %>
       </div>
 
-      <div class="field mt-2">
+      <div class="field mt-4">
         <%= f.text_field :phone_number, :placeholder => "電話番号", size: "40" %>
       </div>
 
-      <div class="field mt-2">
+      <div class="field mt-4">
         <%= f.text_field :post_code, :placeholder => "郵便番号", size: "40" %>
       </div>
 
-      <div class="field mt-2">
+      <div class="field mt-4">
         <%= f.text_field :address, :placeholder => "住所", size: "40" %>
       </div>
 
@@ -48,11 +47,11 @@
 
           <div class="row">
             <div class="mx-auto">
-              <%= f.submit "登録" %>
+              <%= f.submit "登録",class: "btn btn-success" %>
             </div>
           </div>
 
-          <div class="row mt-2">
+          <div class="row my-4">
             <div class="mx-auto">
               <%= render "volunteer/shared/links" %>
             </div>
