--- a/app/views/local_government/stocks/new.html.erb
+++ b/app/views/local_government/stocks/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12 text-center">
-      <h3><b>在庫登録</b></h3>
+      <h3 class="my-3"><b>在庫登録</b></h3>
     </div>
   </div>
   <div class="row">
