--- a/app/views/volunteer/volunteers/edit.html.erb
+++ b/app/views/volunteer/volunteers/edit.html.erb
@@ -4,7 +4,7 @@
 
   <div class="row my-5">
     <div class="mx-auto">
-      <h2>会員情報</h2>
+      <h3><b>会員情報</b></h3>
     </div>
   </div>
 
@@ -55,7 +55,7 @@
 
   <div class="row mt-2">
     <div class="col-5 text-right">
-      <%= f.label :address %>
+      <%= f.label :address, "住所" %>
     </div>
     <div class="col-7">
       <%= f.text_field :address %>
@@ -65,7 +65,7 @@
   <div class="row mt-4">
     <div class="col-5 text-right"></div>
     <div class="col-7">
-      <%= f.submit "更新" %>
+      <%= f.submit "更新", class: "btn btn-volunteer" %>
     </div>
   </div>
 
