--- a/app/views/volunteer/local_governments/show.html.erb
+++ b/app/views/volunteer/local_governments/show.html.erb
@@ -23,8 +23,10 @@
               <td class="text-center w-20"><%= stock.memo %></td>
               <td class="text-center w-20"><%= @local_government.population * stock.one_daily_quantity - stock.amount %></td>
               <td class="text-center w-20">
-                <%= f.number_field "stocks[#{stock.id}][quantity]", min: 0, class: 'form-control' %>
-                <%= f.hidden_field "stocks[#{stock.id}][id]", value: stock.id %>
+                <%#= f.number_field "stocks[#{stock.id}][quantity]", min: 0, class: 'form-control' %>
+                <%#= f.hidden_field "stocks[#{stock.id}][id]", value: stock.id %>
+                <%= f.number_field :stock_id %>
+                <%= f.number_field :amount %>
               </td>
             </tr>
             <% end %>
