自治体レイアウト修正

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -28,6 +28,15 @@ td.cell-text-align {
   background-color: #83E1CA;
 }
 
+.btn-local_government {
+  background-color: #83E1CA;
+}
+
+.btn-local_government:hover {
+  background-color: #7CCDB8;
+  border-color: #7CCDB8;
+}
+
 /*ボランティアのカラー*/
 .volunteer_color {
   background-color: #FFB84D;
