--- a/app/views/volunteer/volunteers/show.html.erb
+++ b/app/views/volunteer/volunteers/show.html.erb
@@ -18,7 +18,7 @@
           <tr>
             <th class="text-center">予約履歴一覧</th>
             <td class="text-center">
-              <%= link_to "確認", volunteer_reserves_path, class: "btn btn-volunteer" %>
+              <%= link_to "確認", volunteer_reservations_path, class: "btn btn-volunteer" %>
             </td>
           </tr>
         </tbody>
