--- a/app/views/local_government/stocks/new.html.erb
+++ b/app/views/local_government/stocks/new.html.erb
@@ -7,6 +7,14 @@
   <div class="row">
     <div class="col-1"></div>
     <div class="col-10 text-center">
+      <% if @stock.errors.any? %>
+        <font size="10px"><%= @stock.errors.count %>件のエラーが発生しました</font>
+        <ul>
+          <% @stock.errors.full_messages.each do |message| %>
+            <li class="text-left"><%= message %></li>
+          <% end %>
+        </ul>
+      <% end %>
       <%= form_with model: @stock, url: local_government_stocks_path, method: :post do |f| %>
         <div class="row my-3">
           <div class="col-12 col-md-4">
