--- a/app/views/local_government/stocks/index.html.erb
+++ b/app/views/local_government/stocks/index.html.erb
@@ -33,12 +33,7 @@
             <% @stocks.each do |stock| %>
               <tr>
                 <td><%= stock.name %></td>
-
-
-                <!--↓↓↓暫定です↓↓↓-->
-                <td class="cell-text-align"><%= stock.amount %><%#= stock.amount + ReservationDetails.amount %></td>
-
-
+                <td class="cell-text-align"><%= stock.amount + @reservation_items.find_by_stock_id(stock.id).try(:amount).to_i %></td>
                 <td class="cell-text-align"><%= stock.one_daily_quantity %></td>
                 <td class="cell-text-align"><%= stock.local_government.population * stock.one_daily_quantity - stock.amount %></td>
                 <td class="cell-text-align"><%= stock.deadline.strftime("%Y年%m月%d日") %></td>
