会員情報編集　修正

--- a/app/views/volunteer/volunteers/edit.html.erb
+++ b/app/views/volunteer/volunteers/edit.html.erb
@@ -7,6 +7,12 @@
       <h3><b>会員情報</b></h3>
     </div>
   </div>
+  
+  <div class="row my-5">
+    <div class="mx-auto">
+      <%= render "volunteer/shared/error_messages", resource: resource %>
+    </div>
+  </div>
 
   <div class="row">
     <div class="col-5 text-right">
