--- a/app/views/volunteer/volunteers/edit.html.erb
+++ b/app/views/volunteer/volunteers/edit.html.erb
@@ -8,11 +8,20 @@
     </div>
   </div>
   
-  <div class="row my-5">
-    <div class="mx-auto">
-      <%= render "volunteer/shared/error_messages", resource: resource %>
+  <% if @volunteer.errors.any? %>
+    <div class="row">
+      <div class="col-2"></div>
+      <div class="col-8 text-center">
+        <font size="10px"><%= @volunteer.errors.count %>件のエラーが発生しました</font>
+        <ul>
+          <% @volunteer.errors.full_messages.each do |message| %>
+            <li class="text-left"><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+      <div class="col-2"></div>
     </div>
-  </div>
+  <% end %>
 
   <div class="row">
     <div class="col-5 text-right">
@@ -29,15 +38,6 @@
     </div>
     <div class="col-7">
       <%= f.text_field :email %>
-    </div>
-  </div>
-
-  <div class="row mt-2">
-    <div class="col-5 text-right">
-      <%= f.label :password, "パスワード" %>
-    </div>
-    <div class="col-7">
-      <%= f.text_field :password %>
     </div>
   </div>
 
@@ -65,6 +65,25 @@
     </div>
     <div class="col-7">
       <%= f.text_field :address %>
+    </div>
+  </div>
+  
+  <div class="row mt-5">
+    <div class="col-12 text-center">
+      <p>
+        <strong>
+          変更内容を保存するには、パスワードの入力が必要です。
+        </strong>
+      </p>
+    </div>
+  </div>
+  
+  <div class="row mt-2">
+    <div class="col-5 text-right">
+      <%= f.label :password, "パスワード" %>
+    </div>
+    <div class="col-7">
+      <%= f.text_field :password %>
     </div>
   </div>
 
