自治体　ボランティア　新規会員登録とログイン画面の入力フォームにautofocus: true　追加

--- a/app/views/volunteer/registrations/new.html.erb
+++ b/app/views/volunteer/registrations/new.html.erb
@@ -15,7 +15,7 @@
   <div class="row">
     <div class="mx-auto">
       <div class="field">
-        <%= f.text_field :name, :placeholder => "お名前", size: "40" %>
+        <%= f.text_field :name, autofocus: true, :placeholder => "お名前", size: "40" %>
       </div>
 
       <div class="field mt-4">
