--- a/app/views/volunteer/local_governments/show.html.erb
+++ b/app/views/volunteer/local_governments/show.html.erb
@@ -26,7 +26,7 @@
               <td class="text-center w-20">
                 <%#= f.number_field "stocks[#{stock.id}][quantity]", min: 0, class: 'form-control' %>
                 <%#= f.hidden_field "stocks[#{stock.id}][id]", value: stock.id %>
-                <%= f.number_field :stock_id %>
+                <%= f.hidden_field :stock_id, value: stock.id %>
                 <%= f.number_field :amount %>
               </td>
             </tr>
