--- a/app/views/volunteer/homes/about.html.erb
+++ b/app/views/volunteer/homes/about.html.erb
@@ -39,24 +39,26 @@
         <div class="swiper-button-next"></div>
       </div>
       <script>
-        const swiper = new Swiper(".swiper", {
-        loop: true, // ループ
-        speed: 3000, // 少しゆっくり(デフォルトは300)
-        autoplay: { // 自動再生
-          delay: 3000, // 3秒後に次のスライド
-          disableOnInteraction: false, // 矢印をクリックしても自動再生を止めない
-        },
-        // ページネーション
-        pagination: {
-          el: ".swiper-pagination",
-          clickable: true,
-        },
-        // 前後の矢印
-        navigation: {
-          nextEl: ".swiper-button-next",
-          prevEl: ".swiper-button-prev",
-        },
-      });
+        document.addEventListener('turbolinks:load', function() {
+          const swiper = new Swiper(".swiper", {
+            loop: true, // ループ
+            speed: 3000, // 少しゆっくり(デフォルトは300)
+            autoplay: { // 自動再生
+              delay: 3000, // 3秒後に次のスライド
+              disableOnInteraction: false, // 矢印をクリックしても自動再生を止めない
+            },
+            // ページネーション
+            pagination: {
+              el: ".swiper-pagination",
+              clickable: true,
+            },
+            // 前後の矢印
+            navigation: {
+              nextEl: ".swiper-button-next",
+              prevEl: ".swiper-button-prev",
+            },
+          });
+        });
       </script>
     </div>
   </div>
